# KTRIE

./: .gitignore  CMakeLists.txt  CppProperties.json  KTRIE.sln  KTRIE.vcxproj  KTRIE.vcxproj.filters  README.md  architecture.md  comparisons.md  concepts.md  internal_api.md  kntrie_bench.bat  ktrie.cpp  ktrie.h  ktrie.md  ktrie_abstract.md  ktrie_base.h  ktrie_concepts.md  ktrie_data_ptr.h  ktrie_defines.h  ktrie_dirty_high_pointer.h  ktrie_flags_loc.h  ktrie_hop.h  ktrie_insert_help.h  ktrie_iter.h  ktrie_nav.h  ktrie_node.h  ktrie_num_cvt.h  ktrie_pretty.h  ktrie_remove_help.h  ktrie_skip.h  ktrie_test.cpp  naming.md  test.md  test2.md  words.txt  words_test.txt
.git_old/: ORIG_HEAD  config  index  ms-persist.xml
.git_old/refs/heads/: master
KNTRIE/: KNTrie.java  KNTrieBench.java  README.md  bench_jsx.cpp  bench_kntrie.cpp  bench_kntrie_same.cpp  benchmark.cpp  chart16.err  chart16.html  chart16w.err  chart16w.html  chart32.err  chart32.html  chart64-ms2.html  chart64.err  chart64.html  chart64w.err  chart64w.html  chartX.html  concepts.md  kntrie.cpp  kntrie.hpp  kntrie.java.md  kntrie_bitmask.cpp  kntrie_bitmask.hpp  kntrie_compact.cpp  kntrie_compact.hpp  kntrie_concepts.md  kntrie_impl.cpp  kntrie_impl.hpp  kntrie_live.md  kntrie_ops.cpp  kntrie_ops.hpp  kntrie_pyproject.toml  kntrie_setup.py  kntrie_support.cpp  kntrie_support.hpp  kntrie_test.cpp  ktrie_abstract.md  mut.md  (+2 more)
KSTRIE/: KSTrie.java  KSTrieBench.java  README.md  bench_kstrie.cpp  bench_kstrie.html  bench_kstrie2.cpp  bench_kstrie3.cpp  bench_words.cpp  bench_words.html  bench_words2.cpp  kstrie.cpp  kstrie.hpp  kstrie_bitmask.cpp  kstrie_bitmask.hpp  kstrie_compact.cpp  kstrie_compact.hpp  kstrie_concepts.md  kstrie_impl.cpp  kstrie_impl.hpp  kstrie_live.md  kstrie_pyproject.toml  kstrie_setup.py  kstrie_support.cpp  kstrie_support.hpp  kstrie_test.cpp  py_kstrie.cpp  test_kstrie.py  test_kstrie_api.cpp  test_kstrie_compile.cpp  test_kstrie_iter.cpp
KTOKEN/: README.md  corpus_multi.txt  ktoken.hpp  ktoken.md  ktoken_pyproject.toml  ktoken_setup.py  poc_encode.cpp  poc_hf_loader.cpp  poc_o200k.cpp  poc_p50k.cpp  poc_roundtrip.cpp  poc_train.cpp  py_ktoken.cpp  test_ktoken.py
